# keystroke-sender

./: .gitignore  README.md  install.bat  install.sh  keystroke_sender.py  pyproject.toml  uninstall.bat  uninstall.sh
.github/workflows/: publish.yml
src/keystroke_sender/: host.py  register.py
